--- a/keps/sig-network/5000-endpointslice-controller-flexibility/kep.yaml
+++ b/keps/sig-network/5000-endpointslice-controller-flexibility/kep.yaml
@@ -1,12 +1,12 @@
-title: Well-Known Label to Delegate EndpointSlice Control to Custom Controller
+title: EndpointSlice Controller Flexibility
 kep-number: 5000
 authors:
-  - TBD
+  - "@LionelJouin"
 owning-sig: sig-network
 participating-sigs:
-  - TBD
-status: implementable
-creation-date: 2024-07-01
+  - sig-network
+status: provisional
+creation-date: 2024-07-19
 reviewers:
   - TBD
 approvers:
@@ -17,10 +17,15 @@ see-also:
   - "/keps/sig-network/3685-endpointslice-reconciler-to-staging"
   - "https://github.com/kubernetes/enhancements/issues/3698"
   - "https://github.com/kubernetes/enhancements/pull/1561"
+  - "https://github.com/kubernetes/kubernetes/pull/118953#discussion_r1245970845"
+  - "https://github.com/kubernetes/endpointslice?tab=readme-ov-file#purpose"
+  - "https://github.com/kubernetes/kubernetes/issues/87412"
+  - "https://github.com/kubernetes/kubernetes/pull/87488"
+  - "https://github.com/kubernetes/enhancements/pull/1561"
 replaces: []
 
 # The target maturity stage in the current dev cycle for this KEP.
-stage: stable
+stage: alpha
 
 # The most recent milestone for which work toward delivery of this KEP has been
 # done. This can be the current (upcoming) milestone, if it is being actively
@@ -29,7 +34,7 @@ latest-milestone: "v1.32"
 
 # The milestone at which this feature was, or is targeted to be, at each stage.
 milestone:
-  stable: "v1.32"
+  alpha: "v1.32"
 
 # The following PRR answers are required at alpha release
 # List the feature gate name and the components for which it must be enabled
